log/build_2026-03-03_13-56-22/orion_mtc/stdout_stderr.log
-- Found ament_cmake: 1.3.12 (/opt/ros/humble/share/ament_cmake/cmake)
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 16.0.16 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.7 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.7 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.7 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.9 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found moveit_task_constructor_core: 0.1.3 (/opt/ros/humble/share/moveit_task_constructor_core/cmake)
-- Found Boost: /usr/lib/x86_64-linux-gnu/cmake/Boost-1.74.0/BoostConfig.cmake (found version "1.74.0") found components: chrono date_time filesystem iostreams program_options regex serialization system thread 
-- Found parameter_traits: 0.5.0 (/opt/ros/humble/share/parameter_traits/cmake)
-- Found rclcpp_lifecycle: 16.0.16 (/opt/ros/humble/share/rclcpp_lifecycle/cmake)
-- Found Boost: /usr/lib/x86_64-linux-gnu/cmake/Boost-1.74.0/BoostConfig.cmake (found version "1.74.0") found components: filesystem 
-- library: /usr/lib/x86_64-linux-gnu/libcurl.so
-- Ensuring Eigen3 include directory is part of orocos-kdl CMake target
-- Found Boost: /usr/lib/x86_64-linux-gnu/cmake/Boost-1.74.0/BoostConfig.cmake (found version "1.74.0") found components: system filesystem date_time program_options thread chrono 
-- Found Boost: /usr/lib/x86_64-linux-gnu/cmake/Boost-1.74.0/BoostConfig.cmake (found version "1.74.0") found components: date_time filesystem program_options system thread 
-- Found Boost: /usr/lib/x86_64-linux-gnu/cmake/Boost-1.74.0/BoostConfig.cmake (found version "1.74.0") found components: thread system filesystem regex date_time program_options 
-- Found Boost: /usr/lib/x86_64-linux-gnu/cmake/Boost-1.74.0/BoostConfig.cmake (found version "1.74.0") found components: system filesystem date_time program_options thread 
-- Found control_msgs: 4.8.0 (/opt/ros/humble/share/control_msgs/cmake)
-- Configuring done
-- Generating done
-- Build files have been written to: /home/huzy/My_orion/build/orion_mtc
Consolidate compiler generated dependencies of target mtc_node
[ 50%] Building CXX object CMakeFiles/mtc_node.dir/src/mtc_node.cpp.o
/home/huzy/My_orion/src/orion_mtc/src/mtc_node.cpp: In member function ‘bool OrionMTCTaskNode::executeSolutionLocally(const moveit::task_constructor::SolutionBase&)’:
/home/huzy/My_orion/src/orion_mtc/src/mtc_node.cpp:427:37: error: ‘void moveit::task_constructor::Introspection::fillSolution(moveit_task_constructor_msgs::msg::Solution&, const moveit::task_constructor::SolutionBase&)’ is private within this context
  427 |   task_.introspection().fillSolution(solution_msg, solution);
      |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/humble/include/moveit/task_constructor/task.h:44,
                 from /home/huzy/My_orion/src/orion_mtc/src/mtc_node.cpp:10:
/opt/ros/humble/include/moveit/task_constructor/introspection.h:110:14: note: declared private here
  110 |         void fillSolution(moveit_task_constructor_msgs::msg::Solution& msg, const SolutionBase& s);
      |              ^~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/mtc_node.dir/build.make:76：CMakeFiles/mtc_node.dir/src/mtc_node.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:137：CMakeFiles/mtc_node.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
